tests/ui/typeck/pointer-arith-assign.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `*mut u8`
  --> $DIR/pointer-arith-assign.rs:10:5
   |
LL |     _ptr += 2;
   |     ----^^^^^
   |     |
   |     cannot use `+=` on type `*mut u8`
   |
help: consider replacing `ptr += offset` with `ptr = ptr.wrapping_add(offset)` or `ptr.add(offset)`
   |
LL -     _ptr += 2;
LL +     _ptr = _ptr.wrapping_add(2);
   |

error[E0368]: binary assignment operation `-=` cannot be applied to type `*mut u8`
  --> $DIR/pointer-arith-assign.rs:17:5
   |
LL |     _ptr -= 2;
   |     ----^^^^^
   |     |
   |     cannot use `-=` on type `*mut u8`
   |
help: consider replacing `ptr -= offset` with `ptr = ptr.wrapping_sub(offset)` or `ptr.sub(offset)`
   |
LL -     _ptr -= 2;
LL +     _ptr = _ptr.wrapping_sub(2);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0368`.
